# procyon-lib

./: .gitignore  CMakeLists.txt  procyon-lib.focus-config
src/p_core/: p_defines.h  p_string.h
src/p_math/: p_math.h
src/p_utility/: p_test.h
tests/: test_free_list.c  test_main.c  test_string_set.c
